[package]
name = "messyenv"
version = "0.2.0"
edition = "2021"
author = ["Nagamine, Hideaki <1995.hnagamin@gmail.com>"]
description = "A command-line tool to mess up your local environment"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.25.0"
clap = { version = "4.5.1", features = ["derive"] }
thiserror = "1.0.37"
